# CC-AdvanceCPP

./: .gitignore  README.md
AirplaneWindow/Game/: Game.vcxproj  Game.vcxproj.filters
AirplaneWindow/Game/Src/: AssetManager.cpp  Collision.cpp  Game.cpp  Game.hpp  GameObject.cpp  Scene.cpp  Source.cpp  TextureManager.cpp  Vector2D.cpp  Vector2D.h
AirplaneWindow/Game/Src/ECS/: Animation.h  BackgroundComponent.h  Components.h  ECS.cpp  KeyboardController.h  PlaneComponent.h  SpriteComponent.h
ConsolePacMan/: ConsolePacMan.sln  LICENSE  README.md  TODO.txt  premake5.lua
ConsolePacMan/GameEngine/: GameEngine.vcxproj  GameEngine.vcxproj.filters
ConsolePacMan/GameEngine/src/: GameEngine.h  gepch.h
ConsolePacMan/GameEngine/src/GameEngine/: Application.cpp  Application.h  Collision.cpp  Collision.h  ConsoleGameEngine.cpp  ConsoleGameEngine.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Sprite.cpp  Sprite.h  Window.h
ConsolePacMan/GameEngine/src/GameEngine/Core/: TimeStep.h
ConsolePacMan/GameEngine/src/GameEngine/Core/ECS/: Component.h  Components.h  ECS.h  GameObject.cpp  GameObject.h  Transform.cpp  Transform.h
ConsolePacMan/GameEngine/src/GameEngine/Core/ECS/Components/: AIMovementComponent.h  ColliderComponent.h  KeyboardController.h  SpriteComponent.h  TransformComponent.h
ConsolePacMan/GameEngine/src/GameEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
ConsolePacMan/GameEngine/src/GameEngine/Managers/: AssetManager.cpp  AssetManager.h  SceneManager.cpp  SceneManager.h  SpriteManager.cpp  SpriteManager.h
ConsolePacMan/GameEngine/src/GameEngine/Math/: Vector.cpp  Vector.h  Vector2D-impl.cpp
ConsolePacMan/GameEngine/src/GameEngine/Renderer/: RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererColors.h
ConsolePacMan/GameEngine/src/Platform/ConsoleRender/: ConsoleRendererAPI.cpp  ConsoleRendererAPI.h
ConsolePacMan/GameEngine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
ConsolePacMan/PacManRemake/: PacManRemake.vcxproj  PacManRemake.vcxproj.filters
ConsolePacMan/PacManRemake/res/: PacManEnemy.sprite  PacManMap.scene  PacManSprite.sprite
ConsolePacMan/PacManRemake/src/: PacManApp.cpp  PacManGame.cpp  PacManGame.h  Source.cpp
ConsolePacMan/PacManRemake/src/Scene/: Map.h
ConsolePacMan/Sandbox/: Sandbox.vcxproj
TaskScheduler/: CMakeLists.txt  README.md
TaskScheduler/src/: Source.cpp
TaskScheduler/src/Scheduler/: Scheduler.cpp  Scheduler.hpp  Task.cpp  Task.hpp
TreeSets/: CMakeLists.txt  CMakeSettings.json  README.md  TODO.txt  run  temp.txt
TreeSets/src/: Source.cpp
TreeSets/src/TreeSet/: TreeSet-impl.cpp  TreeSet.cpp  TreeSet.hpp
TreeSets/tests/: CMakeLists.txt
